--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 certifi==2020.12.5
 chardet==4.0.0
+colorama==0.4.4
+commonmark==0.9.1
 cycler==0.10.0
 idna==2.10
 kiwisolver==1.3.1
@@ -7,10 +9,13 @@ matplotlib==3.4.1
 numpy==1.20.2
 pandas==1.2.4
 Pillow==8.2.0
+Pygments==2.8.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+rich==10.1.0
 scipy==1.6.2
 six==1.15.0
+typing-extensions==3.7.4.3
 urllib3==1.26.4
