--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/Users/StefG/.local/share/virtualenvs/mycourse-qSVW5Dn7/bin/python",
+    "python.pythonPath": "/Users/stefg/.local/share/virtualenvs/mycourse-sYAiWuDS/bin/python",
     "python.languageServer": "Pylance"
 }
